@@ -6,7 +6,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -16,67 +15,53 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.EnableWebMvc;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collections;
 
 @Configuration
 @EnableWebSecurity
-@EnableWebMvc
 @EnableGlobalMethodSecurity(prePostEnabled = true)
 public class AppConfig {
 
     @Bean
+    @Autowired
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http.sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(Authorize -> Authorize
+                .authorizeRequests(Authorize -> Authorize
                                 .requestMatchers("/public/**").permitAll()
-                        .requestMatchers("/api/auth/**").hasAnyAuthority("RESTAURANT_OWNER","ADMIN")
+                        .requestMatchers("/api/auth/**").hasAnyAuthority("RESTAURANT_OWNER", "ADMIN")
                         .requestMatchers("/api/**").authenticated()
                         .requestMatchers(HttpMethod.OPTIONS).permitAll()
                         .anyRequest().permitAll()
-
-
-                ).addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
-                .csrf(csrf-> csrf.disable())
-                .cors(cors->cors.configurationSource(corsConfigrationSource()));
+                )
+                .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigrationSource())); // CORS configuration here
 
         return http.build();
     }
 
+    // CORS Configuration to allow specific origins and methods
     private CorsConfigurationSource corsConfigrationSource() {
-
-        return new CorsConfigurationSource() {
-            @Override
-            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-
-                CorsConfiguration cfg = new CorsConfiguration();
-                    cfg.setAllowedOrigins(Arrays.asList(
-                            "http://localhost:3000",
-                            "https://hk-food-psi.vercel.app"
-                    ));
-                cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                cfg.setAllowedHeaders(List.of("*"));
-                    cfg.setAllowCredentials(true);
-                    cfg.setExposedHeaders(Arrays.asList("Authorization"));
-                    
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
-        return source;
-                    
-            }
+        return request -> {
+            CorsConfiguration cfg = new CorsConfiguration();
+            cfg.setAllowedOriginPatterns(Arrays.asList(
+                    "http://localhost:3000",
+                    "https://hk-food-psi.vercel.app"
+            ));
+            cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+            cfg.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization"));
+            cfg.setExposedHeaders(Arrays.asList("Authorization"));
+            cfg.setAllowCredentials(true);
+            cfg.setMaxAge(3600L); // Preflight cache duration in seconds
+            return cfg;
         };
     }
 
+    // Password Encoder Bean for hashing passwords
     @Bean
-    PasswordEncoder passwordEncoder() {
-
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 }
-
-
-
